Added endpoint to insert pod. Used context timeout on DB operations
