# api/route.go
@@ -3,5 +3,6 @@ package api
 import "github.com/gin-gonic/gin"
 
 func RegisterRoutes(router *gin.RouterGroup) {
+	router.POST("/create_pod", CreatePod)
 	router.POST("/update_pod", UpdatePodConfigurtion)
 }
